# TuxRepair

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
core/: CMakeLists.txt  db_manager.cpp  db_manager.h  models.h
desktop-ui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  qol_dialogs.cpp  qol_dialogs.h  register_dialog.cpp  register_dialog.h  resources.qrc  template_editor_dialog.cpp  template_editor_dialog.h  traveler_renderer.cpp  traveler_renderer.h
